--- a/2022.md
+++ b/2022.md
@@ -1,3 +1,4 @@
+# Questions
 - currying in JS
   - its definition
   - advantages and uses
@@ -13,7 +14,7 @@
 - event loop
 - how does promises or async functions tell eventloop that they are ready to be picked
 
-- Frontend masters
+# Frontend masters courses
 - JS -> async/await, polyfills, performance best practices(preload, precache, defer, async)
 - reactjs
 - design patterns
